更新分流规则

--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -2,7 +2,7 @@
 ruleset=DIRECT,https://rules.kr328.app/private.yaml
 ruleset=America,https://cdn.jsdelivr.net/gh/Coldvvater/Mononoke@master/Stash/RuleSet/OpenAI.yaml
 ruleset=YouTube,https://rules.kr328.app/youtube.yaml
-ruleset=NETFLIX,https://rules.kr328.app/netflix.yaml
+ruleset=NETFLIX,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Netflix.yaml
 ruleset=Disney+,https://rules.kr328.app/disney.yaml
 ruleset=Emby,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Emby/Emby.yaml
 ruleset=TaiWan,https://rules.kr328.app/bahamut.yaml
@@ -10,21 +10,19 @@ ruleset=Streaming,https://rules.kr328.app/bilibili@%21cn.yaml
 ruleset=BiliBili,,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Bilibili.yaml
 ruleset=Spotify,https://rules.kr328.app/spotify.yaml
 ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic_No_Resolve.yaml
-ruleset=TikTok,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TikTok/TikTok.yaml
-ruleset=Streaming,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml
-ruleset=Telegram,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram_No_Resolve.yaml
+ruleset=TikTok,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/TikTok.yaml
+ruleset=Streaming,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/ProxyMedia.yaml
+ruleset=Telegram,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Telegram.yaml
 ruleset=Global,https://rules.kr328.app/github.yaml
 ruleset=Global,https://rules.kr328.app/bing.yaml
-ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml
+ruleset=Global,https://rules.kr328.app/twitter.yaml
 ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TestFlight/TestFlight.yaml
 ruleset=Apple,https://rules.kr328.app/apple.yaml
-ruleset=Google,https://rules.kr328.app/google.yaml
+ruleset=Google,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml
 ruleset=Microsoft,https://rules.kr328.app/microsoft.yaml
 ruleset=Games,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game_No_Resolve.yaml
-ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Domain.yaml
-ruleset=Google,[]GEOIP,google
-ruleset=NETFLIX,[]GEOIP,netflix
-ruleset=Mainland,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
+ruleset=Global,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt
+ruleset=Mainland,https://rules.kr328.app/cn.yaml
 ruleset=DIRECT,[]GEOIP,LAN
 ruleset=Mainland,[]GEOIP,CN
 ruleset=Final,[]FINAL
@@ -56,7 +54,7 @@ custom_proxy_group=TaiWan`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=Singapore`select`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=Japan`select`(日|东京|🇯🇵|JP|(?i)Japan)
 custom_proxy_group=America`select`(美|洛杉矶|🇺🇲|US|(?i)States|American)
-custom_proxy_group=Others`select`[]DIRECT`.*
+custom_proxy_group=Others`select`^((?!香港|HK|Hong Kong|台湾|TW|TaiWan|新加坡|SG|Singapore|狮城|日本|JP|Japan|美国|US|States|American|Music)).*$
 ;设置分组标志位
 
 enable_rule_generator=true
