--- a/Stash/Clash/Config/Evolve.ini
+++ b/Stash/Clash/Config/Evolve.ini
@@ -7,9 +7,9 @@ ruleset=Disney+,https://rules.kr328.app/disney.yaml
 ruleset=Emby,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Emby/Emby.yaml
 ruleset=TaiWan,https://rules.kr328.app/bahamut.yaml
 ruleset=Streaming,https://rules.kr328.app/bilibili@%21cn.yaml
-ruleset=BiliBili,,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Bilibili.yaml
+ruleset=BiliBili,,https://rules.kr328.app/bilibili.yaml
 ruleset=Spotify,https://rules.kr328.app/spotify.yaml
-ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/NetEaseMusic/NetEaseMusic_No_Resolve.yaml
+ruleset=NetEaseMusic,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/NetEaseMusic.yaml
 ruleset=TikTok,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/TikTok.yaml
 ruleset=Streaming,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/ProxyMedia.yaml
 ruleset=Telegram,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Telegram.yaml
@@ -18,7 +18,7 @@ ruleset=Global,https://rules.kr328.app/bing.yaml
 ruleset=Global,https://rules.kr328.app/twitter.yaml
 ruleset=Global,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/TestFlight/TestFlight.yaml
 ruleset=Apple,https://rules.kr328.app/apple.yaml
-ruleset=Google,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml
+ruleset=Google,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Providers/Ruleset/Google.yaml
 ruleset=Microsoft,https://rules.kr328.app/microsoft.yaml
 ruleset=Games,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game_No_Resolve.yaml
 ruleset=Global,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt
