--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.10.30
+# > Update Date: 2023.10.31
 
 [General]
 # > 日志等级
@@ -112,7 +112,7 @@ Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点切换
 Proxy = select, Auto, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
 # > 自动选择
-Auto = url-test, policy-path=此处填写订阅链接, url=http://www.apple.com/library/test/success.html, interval=300, update-interval=86400, tolerance=50
+Auto = url-test, policy-path=此处填写订阅链接, url=http://www.apple.com/library/test/success.html, interval=600, update-interval=86400, tolerance=50
 # > 故障转移
 Fallback = fallback, interval=600, include-all-proxies=0, include-other-group="Auto"
 # > SSID策略
@@ -151,7 +151,8 @@ Google = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, Amer
 Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 游戏平台
 Games = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
-
+# > 网络测试
+Speedtest = select, DIRECT, Proxy, no-alert=0, hidden=0
 # > 香港节点
 HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 台湾节点
@@ -170,58 +171,64 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 # > 屏蔽 UDP 443
 #AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 
+# > Speedtest
+DOMAIN-SUFFIX,ziffstatic.com,Speedtest
+
 # > 隐私网络
-DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
+DOMAIN-SET,https://raw.githubusercontents.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
+
+# > Speedtest
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,Speedtest
 
 # > OpenAI
-RULE-SET,https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Surge/Rules/OpenAI.list,OpenAI
+RULE-SET,https://raw.githubusercontents.com/Coldvvater/Mononoke/master/Surge/Rules/OpenAI.list,OpenAI
 
 # > 流媒体(以及其他未指定策略媒体。)
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list,YouTube
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list,NETFLIX
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list,Disney+
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Emby/Emby.list,Emby
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list,TaiWan
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list,Streaming
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list,BiliBili
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list,Spotify
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list,NetEaseMusic
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list,TikTok
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list,YouTube
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list,NETFLIX
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list,Disney+
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Emby/Emby.list,Emby
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list,TaiWan
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBiliIntl/BiliBiliIntl.list,Streaming
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list,BiliBili
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list,Spotify
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list,NetEaseMusic
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list,TikTok
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
 
 # > Telegram
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list,Telegram
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list,Telegram
 
 # > GitHub
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list,Global
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list,Global
 
 # > 必应搜索
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,Global
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,Global
 
 # > Teitter
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list,Global
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list,Global
 
 # > Testfilght
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
 
 # > 苹果服务
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list,Apple
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list,Apple
 
 # > 谷歌服务
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list,Google
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list,Google
 
 # > 微软服务
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list,Microsoft
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list,Microsoft
 
 # > 游戏平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
 # > 国外网站
-DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/proxy.txt,Global
+DOMAIN-SET,https://raw.githubusercontents.com/Loyalsoldier/surge-rules/release/proxy.txt,Global
 
 # > 国内网站
-RULE-SET,https://raw.githubusercontent.com/Blankwonder/surge-list/master/cn.list,Mainland
-DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/direct.txt,Mainland
+RULE-SET,https://raw.githubusercontents.com/Blankwonder/surge-list/master/cn.list,Mainland
+DOMAIN-SET,https://raw.githubusercontents.com/Loyalsoldier/surge-rules/release/direct.txt,Mainland
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
