更新注释描述和格式

--- a/Stash/Clash/Config/GeneralConfig.yml
+++ b/Stash/Clash/Config/GeneralConfig.yml
@@ -1,55 +1,34 @@
 # Clash Config Make by Coldvvater
-# TG Channel: https://t.me/Ison_Channel
-# GitHub主页: https://github.com/Coldvvater
-# Update Date: 2023.06.02
+# TG Channel: https://t.me/Coldvvater_Channel
+# GitHub: https://github.com/Coldvvater
+# Update Date: 2023.10.31
 
-mixed-port: 7890      # 混合端口，HTTP和SOCKS5用一个端口
-allow-lan: true       # 允许局域网的连接（共享代理）
-bind-address: "*"     # 监听IP白名单，可绑定单个IPv4和v6地址，"*" 为绑定所有IP地址，仅在将allow-lan设置为true时适用
+mixed-port: 7890                     # 混合端口，HTTP和SOCKS5用一个端口
+allow-lan: true                      # 允许局域网的连接（共享代理）
+bind-address: "*"                    # 监听IP白名单，可绑定单个IPv4和v6地址，"*" 为绑定所有IP地址，仅在将allow-lan设置为true时适用
                       
 
-ipv6: true            # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
-mode: rule            # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
-log-level: info       # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
+ipv6: true                           # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
+mode: rule                           # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
+log-level: info                      # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
 
-external-controller: 127.0.0.1:9090   # 外部控制器监听地址，可以使用 RESTful API 来控制你的 clash 内核
+external-controller: 127.0.0.1:9090  # 外部控制器监听地址，可以使用 RESTful API 来控制你的 clash 内核
 
 dns:
-  enable: true             # 关闭将使用系统 DNS
-  ipv6: true               # IPV6解析开关；如果为false，将返回ipv6结果为空
-  enhanced-mode: fake-ip   # 模式：redir-host或fake-ip
-  listen: 0.0.0.0:1053     # DNS 监听地址
-  default-nameserver:      # 解析非IP的dns用的dns服务器，只支持纯IP，（可为其加密）
-     - 223.5.5.5
-     - 119.29.29.29
-     - 114.114.114.114
+  enable: true                       # 关闭将使用系统 DNS
+  ipv6: true                         # IPV6解析开关；如果为false，将返回ipv6结果为空
+  enhanced-mode: fake-ip             # 模式：redir-host或fake-ip
+  listen: 0.0.0.0:53                 # DNS 监听地址
+  default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
+                                     # 解析非IP的dns用的dns服务器，只支持纯IP，（Meta可为其加密）
+  nameserver: [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
+                                     # 默认DNS服务器，支持udp/tcp/dot/doh/doq
 
-  fake-ip-range: 198.18.0.1/16  # Fake-IP 解析地址池
-  fake-ip-filter:               # Fake-ip 过滤，列表中的域名返回真实IP
-    - '+.lan'
-    - localhost.ptlogin2.qq.com
-    - '*.battle.net'
-    - '*.blzstatic.cn'
-    - '*.battlenet.com'
-    - '*.battlenet.com.cn'
-    - 'lens.l.google.com'
-    - '+.srv.nintendo.net'
-    - '+.stun.playstation.net'
-    - '+.msftncsi.com'
-    - '+.xboxlive.com'
-    - 'msftconnecttest.com'
-    - 'xbox.*.*.microsoft.com'
-    - 'xbox.*.microsoft.com'         
-    - '+.msftconnecttest.com'
-    - '*.msftncsi.com'
-    - '*.msftconnecttest.com'
-    - '*.mcdn.bilivideo.cn'
+  fake-ip-range: 198.18.0.1/16       # Fake-IP 解析地址池
+  fake-ip-filter: ['*.lan', 'cable.auth.com', '*.msftconnecttest.com', '*.msftncsi.com', 'network-test.debian.org', 'detectportal.firefox.com', 'resolver1.opendns.com', '*.srv.nintendo.net', '*.stun.playstation.net', 'xbox.*.microsoft.com', '*.xboxlive.com', 'stun.*', 'global.turn.twilio.com', 'global.stun.twilio.com', 'localhost.*.qq.com', 'localhost.*.weixin.qq.com', '*.logon.battlenet.com.cn', '*.logon.battle.net', '*.blzstatic.cn', 'music.163.com', '*.music.163.com', '*.126.net', 'musicapi.taihe.com', 'music.taihe.com', 'songsearch.kugou.com', 'trackercdn.kugou.com', '*.kuwo.cn', 'api-jooxtt.sanook.com', 'api.joox.com', 'joox.com', 'y.qq.com', '*.y.qq.com', 'streamoc.music.tc.qq.com', 'mobileoc.music.tc.qq.com', 'isure.stream.qqmusic.qq.com', 'dl.stream.qqmusic.qq.com', 'aqqmusic.tc.qq.com', 'amobile.music.tc.qq.com', '*.xiami.com', '*.music.migu.cn', 'music.migu.cn', 'proxy.golang.org', '*.mcdn.bilivideo.cn', '*.cmpassport.com', 'id6.me', 'open.e.189.cn', 'mdn.open.wo.cn', 'opencloud.wostore.cn', 'auth.wosms.cn', '*.jegotrip.com.cn', '*.icitymobile.mobi', '*.pingan.com.cn', '*.cmbchina.com', 'pool.ntp.org', '*.pool.ntp.org', 'ntp.*.com', 'time.*.com', 'ntp?.*.com', 'time?.*.com', 'time.*.gov', 'time.*.edu.cn', '*.ntp.org.cn', 'PDC._msDCS.*.*', 'DC._msDCS.*.*', 'GC._msDCS.*.*']
+                                     # Fake-ip 过滤，列表中的域名返回真实IP
 
-  nameserver:                    # 默认DNS服务器，支持udp/tcp/dot/doh/doq
-    - https://223.5.5.5/dns-query
-    - https://1.12.12.12/dns-query
-
-  # TUN模式
+# TUN模式
 tun:
   enable: true
   stack: gvisor
