--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -1,7 +1,7 @@
 # Stash/Clash/Premium/Meta Config Make by Coldvvater
 # TG Channel: https://t.me/Coldvvater_Channel
 # GitHub: https://github.com/Coldvvater
-# Update Date: 2023.10.31
+# Update Date: 2023.11.01
 
 mixed-port: 7890                     # 混合端口，HTTP和SOCKS5用一个端口
 allow-lan: true                      # 允许局域网的连接（共享代理）
@@ -221,7 +221,7 @@ rule-providers:
  cn: {<<: *d, path: ./rules/cn.yaml, url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Domain.yaml}
 
 # 国外网站
- proxy: {<<: *d, path: ./rules/proxy.yaml, url: https://raw.githubusercontents.com/Loyalsoldier/clash-rules/release/proxy.txt}
+ proxy: {<<: *d, path: ./rules/proxy.yaml, url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml}
 
 # 分流规则引用
 rules:
