调整分流策略

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -120,7 +120,7 @@ SSIDPolicy = subnet, default = Auto, "此处改成你家里WiFi名称" = DIRECT,
 # > 国外网站
 Global = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
-Mainland = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Mainland = select, DIRECT, Proxy, Auto, no-alert=0, hidden=0
 # > 人工智能
 OpenAI = select, America, Japan, Singapore, TaiWan, Others, no-alert=0, hidden=0
 # > 油管视频
@@ -136,7 +136,7 @@ BiliBili = select, DIRECT, HongKong, TaiWan, no-alert=0, hidden=0
 # > 声田音乐
 Spotify = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 网易云音乐
-NetEaseMusic = select, DIRECT, no-alert=0, hidden=0
+NetEaseMusic = select, DIRECT, Proxy, no-alert=0, hidden=0
 # > 海外抖音
 TikTok = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国际媒体
@@ -203,7 +203,7 @@ RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list,Global
 
 # > 必应搜索
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,Global
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,OpenAI
 
 # > Teitter
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list,Global
