调整注释描述

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -93,17 +93,12 @@ udp-priority = true
 hide-vpn-icon = false
 
 # > HTTP-API
-# 依次为：密码，主机名，端口(xxxxxx改成你自定义的密码）
+# (xxxxxx改成你自定义密码）
 http-api = xxxxxx@0.0.0.0:6171
 # > HTTP-API-TLS
 http-api-tls = false
 # > Web控制器
-# Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
 http-api-web-dashboard = true
-
-[Ponte]
-# > 通过代理使用 Ponte
-client-proxy-name = Proxy
 
 [Proxy Group]
 # > 策略组
