--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -1,6 +1,5 @@
-# OpenAI
-
 payload:
+  # > OpenAI ChatGPT
   - DOMAIN,cdn.auth0.com
   - DOMAIN,o33249.ingest.sentry.io
   - DOMAIN-SUFFIX,ai.com
@@ -18,3 +17,14 @@ payload:
   - DOMAIN-SUFFIX,openaicom.imgix.net
   - DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net
   - DOMAIN-SUFFIX,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
+
+  # > New Bing
+  - DOMAIN-SUFFIX,bing.com
+  - DOMAIN-SUFFIX,bingapis.com
+
+  # > Claude
+  - DOMAIN-SUFFIX,anthropic.com
+  - DOMAIN-SUFFIX,claude.ai
+
+  # > Bard
+  - DOMAIN,bard.google.com
