新增新参数

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.11.10
+# > Update Date: 2023.11.11
 
 [General]
 # > 日志等级
@@ -85,6 +85,9 @@ use-local-host-item-for-proxy = false
 # > UDP IP 防泄漏
 # 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
 udp-policy-not-supported-behaviour = REJECT
+
+# > 强行关闭对特定主机名的主动协议嗅探
+always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.195.*, 149.154.1*, 185.76.151.*, 91.105.1*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
