--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.11.11
+# > Update Date: 2023.11.12
 
 [General]
 # > 日志等级
@@ -87,7 +87,7 @@ use-local-host-item-for-proxy = false
 udp-policy-not-supported-behaviour = REJECT
 
 # > 强行关闭对特定主机名的主动协议嗅探
-always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.195.*, 149.154.1*, 185.76.151.*, 91.105.1*
+always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
