尝试移除直连策略和规则(实验)，GEOIP如有漏可反馈。

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,18 +1,11 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.11.12
+# > Update Date: 2023.11.16
 
 [General]
 # > 日志等级
 loglevel = notify
-
-# > 增强版 Wi-Fi 助理
-# 在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭：false,开启把false修改为true即可。
-wifi-assist = false
-
-# > 混合网络 Hybrid Network（建议关闭、无限流量或者超出套餐流量不限速可选择开启）
-all-hybrid = false
 
 # > Internet 测试 URL
 internet-test-url = http://www.bing.com
@@ -29,17 +22,25 @@ disable-geoip-db-auto-update = false
 # > IPv6 支持（默认关闭）
 ipv6 = false
 
+# > 增强版 Wi-Fi 助理
+# 在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭
+wifi-assist = false
+
+# > Wi-Fi 不是主接口则使用SSID组的默认策略
+use-default-policy-if-wifi-not-primary = false
+
+# > 混合网络 Hybrid Network（建议关闭、无限流量或者超出套餐流量不限速可选择开启）
+all-hybrid = false
+
 # > 允许 Wi-Fi 访问 (仅 iOS ）
 allow-wifi-access = true
 wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
-# > Allow Hotspot Access（允许个人热点访问）
+# > 允许个人热点访问
 allow-hotspot-access = true
 # > 允许 Wi-Fi 访问 (仅 macOS，若允许远程访问将「127.0.0.1」改为「0.0.0.0」)
 http-listen = 127.0.0.1:6152
 socks5-listen = 127.0.0.1:6153
-# > Wi-Fi 不是主接口则使用SSID组的默认策略
-use-default-policy-if-wifi-not-primary = false
 
 # > 系统代理 (+VIF)接管优先
 compatibility-mode = 1
@@ -71,8 +72,8 @@ exclude-simple-hostnames = true
 
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
-# > 加密的DNS服务器(如无必要不建议使用)
-# encrypted-dns-server = https://223.5.5.5/dns-query, https://1.12.12.12/dns-query
+# > 加密 DNS 服务器
+encrypted-dns-server = h3://223.5.5.5/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
@@ -117,8 +118,6 @@ Fallback = fallback, interval=600, include-all-proxies=0, include-other-group="A
 SSIDPolicy = subnet, default = Auto, "此处改成你家里WiFi名称" = DIRECT, "此处改成你家里WiFi名称_5G" = DIRECT
 # > 国外网站
 Global = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
-# > 国内网站
-Mainland = select, DIRECT, Proxy, Auto, no-alert=0, hidden=0
 # > 人工智能
 OpenAI = select, America, Japan, Singapore, TaiWan, Others, no-alert=0, hidden=0
 # > 油管视频
@@ -181,7 +180,7 @@ RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/
 # > OpenAI
 RULE-SET,https://raw.githubusercontents.com/Coldvvater/Mononoke/master/Surge/Rules/AI.list,OpenAI
 
-# > 流媒体(以及其他未指定策略媒体。)
+# > 流媒体(以及其他未指定专属策略媒体)
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list,YouTube
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list,NETFLIX
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list,Disney+
@@ -221,10 +220,6 @@ RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/
 # > 国外网站
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
 DOMAIN-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
-
-# > 国内网站
-RULE-SET,https://raw.githubusercontents.com/Blankwonder/surge-list/master/cn.list,Mainland
-DOMAIN-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China_Domain.list,Mainland
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
