--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -206,7 +206,8 @@ RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset
 RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
 
 # > 苹果服务
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list,Apple
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.listt,Apple
+DOMAIN-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,Apple
 
 # > 谷歌服务
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list,Google
