加密DNS尝试使用阿里DoQ，有问题可反馈。

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,14 +1,14 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.11.16
+# > Update Date: 2023.11.21
 
 [General]
 # > 日志等级
 loglevel = notify
 
 # > Internet 测试 URL
-internet-test-url = http://www.bing.com
+internet-test-url = http://www.aliyun.com
 # > 代理测速 URL
 proxy-test-url = http://www.apple.com/library/test/success.html
 # > 测试超时（秒）
@@ -73,7 +73,7 @@ exclude-simple-hostnames = true
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 # > 加密 DNS 服务器
-encrypted-dns-server = h3://223.5.5.5/dns-query
+encrypted-dns-server = quic://223.5.5.5:853
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
