--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -1,19 +1,23 @@
 payload:
   # > OpenAI ChatGPT
-  - DOMAIN-SUFFIX,ai.com
+  - DOMAIN,api.statsig.com
+  - DOMAIN,o33249.ingest.sentry.io
+  - DOMAIN,openai-api.arkoselabs.com
+  - DOMAIN,static.cloudflareinsights.com
+  - DOMAIN-SUFFIX,algolia.net
   - DOMAIN-SUFFIX,auth0.com
+  - DOMAIN-SUFFIX,cdn.cloudflare.net
   - DOMAIN-SUFFIX,challenges.cloudflare.com
-  - DOMAIN-SUFFIX,chat.openai.com.cdn.cloudflare.net
   - DOMAIN-SUFFIX,client-api.arkoselabs.com
   - DOMAIN-SUFFIX,events.statsigapi.net
   - DOMAIN-SUFFIX,featuregates.org
-  - DOMAIN-SUFFIX,googleapis.com
   - DOMAIN-SUFFIX,identrust.com
   - DOMAIN-SUFFIX,intercom.io
   - DOMAIN-SUFFIX,intercomcdn.com
   - DOMAIN-SUFFIX,launchdarkly.com
   - DOMAIN-SUFFIX,oaistatic.com
   - DOMAIN-SUFFIX,oaiusercontent.com
+  - DOMAIN-SUFFIX,observeit.net
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,openaiapi-site.azureedge.net
   - DOMAIN-SUFFIX,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
@@ -21,7 +25,9 @@ payload:
   - DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net
   - DOMAIN-SUFFIX,poe.com
   - DOMAIN-SUFFIX,segment.io
+  - DOMAIN-SUFFIX,sentry.io
   - DOMAIN-SUFFIX,stripe.com
+  - DOMAIN-KEYWORD,openaicom-api
 
   # > New Bing
   - DOMAIN-SUFFIX,bing.com
