还是加点常用的直连规则吧

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.11.21
+# > Update Date: 2023.12.04
 
 [General]
 # > 日志等级
@@ -221,6 +221,9 @@ RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/
 # > 国外网站
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
 DOMAIN-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
+
+# > 国内网站
+RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
