--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.06
+# > Update Date: 2023.12.07
 
 [General]
 # > 日志等级
@@ -161,7 +161,7 @@ Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, no-alert=0, hi
 # > 美国节点
 America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 其他节点
-Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American)).*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
+Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇺🇸|美|US|States|American).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
 # > 规则分流
