--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -1,8 +1,15 @@
 payload:
   # > OpenAI ChatGPT
   - DOMAIN,api.statsig.com
+  - DOMAIN,browser-intake-datadoghq.com
+  - DOMAIN,cdn.openai.com
+  - DOMAIN,chat.openai.com
+  - DOMAIN,chat.openai.com.cdn.cloudflare.net
+  - DOMAIN,ios.chat.openai.com
   - DOMAIN,o33249.ingest.sentry.io
   - DOMAIN,openai-api.arkoselabs.com
+  - DOMAIN,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
+  - DOMAIN,production-openaicom-storage.azureedge.net
   - DOMAIN,static.cloudflareinsights.com
   - DOMAIN-SUFFIX,algolia.net
   - DOMAIN-SUFFIX,auth0.com
@@ -20,7 +27,6 @@ payload:
   - DOMAIN-SUFFIX,observeit.net
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,openaiapi-site.azureedge.net
-  - DOMAIN-SUFFIX,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
   - DOMAIN-SUFFIX,openaicom.imgix.net
   - DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net
   - DOMAIN-SUFFIX,poe.com
