--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -39,9 +39,9 @@ d: &d {type: http, behavior: domain, interval: 86400}
 p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://www.apple.com/library/test/success.html, interval: 300}}
 
 # 代理组相关
-g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT]}
+g: &g {type: select, proxies: [Proxy, Auto, Fallback, HongKong, Singapore, Others, DIRECT]}
 
-m: &m {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others]}
+m: &m {type: select, proxies: [DIRECT, Proxy, Auto, Fallback, HongKong, Singapore, Others]}
 
 # 本地服务器
 proxies: null
@@ -62,7 +62,7 @@ proxy-groups:
  - {name: Final, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Final.png, <<: *g, proxies: [Proxy,DIRECT]}
 
 # 节点切换
- - {name: Proxy, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Rocket.png, <<: *g, proxies: [Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others]}
+ - {name: Proxy, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Rocket.png, <<: *g, proxies: [Auto,Fallback,HongKong,Singapore,Others]}
 
 # 自动选择
  - {name: Auto, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Auto.png, type: url-test, lazy: true, <<: *u}
@@ -77,7 +77,7 @@ proxy-groups:
  - {name: Mainland, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/China_Map.png, <<: *m, proxies: [DIRECT,Proxy,Auto]}
 
 # 人工智能
- - {name: OpenAI, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Bot.png, <<: *g, proxies: [America,Japan,Singapore,TaiWan,Others]}
+ - {name: OpenAI, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Bot.png, <<: *g, proxies: [Singapore,Others]}
 
 # 油管视频
  - {name: YouTube, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/YouTube.png, <<: *g}
@@ -92,7 +92,7 @@ proxy-groups:
  - {name: Emby, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Emby.png, <<: *g}
 
 # 哔哩哔哩
- - {name: BiliBili, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/bilibili.png, <<: *m, proxies: [DIRECT,HongKong,TaiWan]}
+ - {name: BiliBili, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/bilibili.png, <<: *m, proxies: [DIRECT,HongKong]}
 
 # 声田音乐
  - {name: Spotify, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Spotify.png, <<: *g}
@@ -127,20 +127,8 @@ proxy-groups:
 # 香港节点
  - {name: HongKong, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png, <<: *u, filter: "港|🇭🇰|HK|(?i)Hong"}
 
-# 台湾节点
- - {name: TaiWan, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/China.png, <<: *u, filter: "台|🇨🇳|🇹🇼|湾|TW|(?i)Taiwan"}
-
 # 狮城节点
- - {name: Singapore, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Singapore.png, <<: *u, filter: "新加坡|坡|狮城|🇸🇬|SG|(?i)Singapore"}
-
-# 日本节点
- - {name: Japan, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Japan.png, <<: *u, filter: "日|🇯🇵|东京|JP|(?i)Japan"}
-
-# 美国节点
- - {name: America, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/United_States.png, <<: *u, filter: "美|🇺🇲|US|(?i)States|American"}
-
-# 其他节点
- - {name: Others, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Airport.png, <<: *u, filter: "^((?!香港|HK|Hong Kong|台湾|TW|TaiWan|新加坡|SG|Singapore|狮城|日本|JP|Japan|美国|US|States|American)).*$"}
+ - {name: Singapore, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Singapore.png, <<: *u, filter: "新加坡|新|狮城|🇸🇬|SG|(?i)Singapore"}
 
 # 远程规则集
 rule-providers:
