--- a/Stash/Clash/Config/Evolve.yaml
+++ b/Stash/Clash/Config/Evolve.yaml
@@ -62,7 +62,7 @@ proxy-groups:
  - {name: Final, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Final.png, <<: *g, proxies: [Proxy,DIRECT]}
 
 # 节点切换
- - {name: Proxy, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Rocket.png, <<: *g, proxies: [Auto,Fallback,HongKong,Singapore,Others]}
+ - {name: Proxy, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Rocket.png, <<: *g, proxies: [Auto,Fallback,HongKong,Singapore]}
 
 # 自动选择
  - {name: Auto, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Auto.png, type: url-test, lazy: true, <<: *u}
@@ -77,7 +77,7 @@ proxy-groups:
  - {name: Mainland, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/China_Map.png, <<: *m, proxies: [DIRECT,Proxy,Auto]}
 
 # 人工智能
- - {name: OpenAI, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Bot.png, <<: *g, proxies: [Singapore,Others]}
+ - {name: OpenAI, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/Bot.png, <<: *g, proxies: [Singapore]}
 
 # 油管视频
  - {name: YouTube, icon: https://raw.githubusercontents.com/Koolson/Qure/master/IconSet/mini/YouTube.png, <<: *g}
