调整规则分流和DNS

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.07
+# > Update Date: 2023.12.17
 
 [General]
 # > 日志等级
@@ -15,7 +15,7 @@ proxy-test-url = http://www.apple.com/library/test/success.html
 test-timeout = 5
 
 # > 自定义 GeoIP 数据库
-geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+geoip-maxmind-url = https://raw.githubusercontents.com/Loyalsoldier/geoip/release/Country.mmdb
 # > GeoIP 禁用自动更新
 disable-geoip-db-auto-update = false
 
@@ -71,9 +71,9 @@ always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.co
 exclude-simple-hostnames = true
 
 # > DNS 服务器
-dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
+dns-server = 223.5.5.5,119.29.29.29
 # > 加密 DNS 服务器
-encrypted-dns-server = quic://223.5.5.5:853
+encrypted-dns-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
@@ -171,8 +171,8 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 # > Speedtest
 DOMAIN-SUFFIX,ziffstatic.com,Speedtest
 
-# > 隐私网络
-DOMAIN-SET,https://raw.githubusercontents.com/Loyalsoldier/surge-rules/release/private.txt,DIRECT
+# > 局域网隐私网络
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
 # > Speedtest
 RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,Speedtest
@@ -206,8 +206,7 @@ RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset
 RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
 
 # > 苹果服务
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,Apple
-DOMAIN-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,Apple
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_All_No_Resolve.list,Apple
 
 # > 谷歌服务
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list,Google
@@ -219,17 +218,13 @@ RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset
 RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
 # > 国外网站
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,Global
-DOMAIN-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
+RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_All_No_Resolve.list,Global
 
 # > 国内网站
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
-
-# > Local Area Network 局域网指定分流
-RULE-SET,LAN,DIRECT
 
 # > GeoIP China
 GEOIP,CN,DIRECT
