--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.17
+# > Update Date: 2023.12.18
 
 [General]
 # > 日志等级
@@ -73,7 +73,7 @@ exclude-simple-hostnames = true
 # > DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29
 # > 加密 DNS 服务器
-encrypted-dns-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+encrypted-dns-server = quic://223.5.5.5:853,https://1.12.12.12/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
