调整分流规则和DNS

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.18
+# > Update Date: 2023.12.20
 
 [General]
 # > 日志等级
@@ -71,9 +71,9 @@ always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.co
 exclude-simple-hostnames = true
 
 # > DNS 服务器
-dns-server = 223.5.5.5,119.29.29.29
-# > 加密 DNS 服务器
-encrypted-dns-server = quic://223.5.5.5:853,https://1.12.12.12/dns-query
+dns-server = 223.5.5.5,119.29.29.29,180.184.1.1
+# > 加密 DNS 服务器(默认关闭，按需启用)
+#encrypted-dns-server = quic://223.5.5.5:853,https://1.12.12.12/dns-query
 # > Hijack DNS
 hijack-dns = *:53
 # > 关闭 DOH 的服务端证书验证
@@ -171,7 +171,7 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 # > Speedtest
 DOMAIN-SUFFIX,ziffstatic.com,Speedtest
 
-# > 局域网隐私网络
+# > 局域网/隐私网络
 RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
 # > Speedtest
@@ -194,7 +194,7 @@ RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
 
 # > Telegram
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list,Telegram
+RULE-SET,https://raw.githubusercontents.com/LucaLin233/Luca_Conf/main/Surge/Rule/Telegram.list,Telegram
 
 # > GitHub
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list,Global
