更换Telegram规则集

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.20
+# > Update Date: 2023.12.22
 
 [General]
 # > 日志等级
@@ -195,6 +195,9 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 # > 屏蔽 UDP 443
 #AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 
+# GitHub直连镜像域名
+DOMAIN,raw.gitmirror.com,Global
+
 # > Speedtest
 DOMAIN-SUFFIX,ziffstatic.com,Speedtest
 
@@ -221,7 +224,7 @@ RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
 
 # > Telegram
-RULE-SET,https://raw.githubusercontents.com/LucaLin233/Luca_Conf/main/Surge/Rule/Telegram.list,Telegram
+RULE-SET,https://raw.githubusercontents.com/Coldvvater/Mononoke/master/Surge/Rules/Telegram.list,Telegram
 
 # > GitHub
 RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list,Global
