更新always-raw-tcp-hosts

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -88,7 +88,7 @@ use-local-host-item-for-proxy = false
 udp-policy-not-supported-behaviour = REJECT
 
 # > 强行关闭对特定主机名的主动协议嗅探
-always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*
+always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*, 95.161.6*, 2001:b28*, 2001:67c*, 2a0a:f280*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
