--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.22
+# > Update Date: 2023.12.23
 
 [General]
 # > 日志等级
@@ -88,7 +88,7 @@ use-local-host-item-for-proxy = false
 udp-policy-not-supported-behaviour = REJECT
 
 # > 强行关闭对特定主机名的主动协议嗅探
-always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*, 95.161.6*, 2001:b28*, 2001:67c*, 2a0a:f280*
+always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*, 95.161.6*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
@@ -192,9 +192,6 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 规则分流
-# > 屏蔽 UDP 443
-#AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
-
 # GitHub直连镜像域名
 DOMAIN,raw.gitmirror.com,Global
 
