移除always-raw-tcp-hosts字段及相关域名、IP

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.12.23
+# > Update Date: 2023.12.24
 
 [General]
 # > 日志等级
@@ -86,9 +86,6 @@ use-local-host-item-for-proxy = false
 # > UDP IP 防泄漏
 # 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
 udp-policy-not-supported-behaviour = REJECT
-
-# > 强行关闭对特定主机名的主动协议嗅探
-always-raw-tcp-hosts = www.google.com, 91.108.*, 5.28.19*, 149.154.1*, 185.76.151.*, 91.105.1*, 95.161.6*
 
 # > 提高处理 UDP 流量优先级
 udp-priority = true
@@ -192,8 +189,8 @@ Others = select, policy-regex-filter=^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|T
 
 [Rule]
 # > 规则分流
-# GitHub直连镜像域名
-DOMAIN,raw.gitmirror.com,Global
+# GitHub直连加速域名
+DOMAIN-SUFFIX,gitmirror.com,Global
 
 # > Speedtest
 DOMAIN-SUFFIX,ziffstatic.com,Speedtest
