--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -15,7 +15,7 @@ proxy-test-url = http://www.apple.com/library/test/success.html
 test-timeout = 5
 
 # > 自定义 GeoIP 数据库
-geoip-maxmind-url = https://raw.githubusercontents.com/soffchen/GeoIP2-CN/release/Country.mmdb
+geoip-maxmind-url = https://raw.gitmirror.com/soffchen/GeoIP2-CN/release/Country.mmdb
 # > GeoIP 禁用自动更新
 disable-geoip-db-auto-update = false
 
@@ -196,56 +196,56 @@ DOMAIN-SUFFIX,gitmirror.com,Global
 DOMAIN-SUFFIX,ziffstatic.com,Speedtest
 
 # > 局域网/隐私网络
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Lan/Lan.list,DIRECT
 
 # > Speedtest
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,Speedtest
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,Speedtest
 
 # > OpenAI
-RULE-SET,https://raw.githubusercontents.com/Coldvvater/Mononoke/master/Surge/Rules/AI.list,OpenAI
+RULE-SET,https://raw.gitmirror.com/Coldvvater/Mononoke/master/Surge/Rules/AI.list,OpenAI
 
 # > 流媒体(以及其他未指定专属策略媒体)
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list,YouTube
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list,NETFLIX
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list,Disney+
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Emby/Emby.list,Emby
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list,TaiWan
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBiliIntl/BiliBiliIntl.list,Streaming
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list,BiliBili
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list,Spotify
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list,NetEaseMusic
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list,TikTok
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,YouTube
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Netflix/Netflix.list,NETFLIX
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Disney/Disney.list,Disney+
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Emby/Emby.list,Emby
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bahamut/Bahamut.list,TaiWan
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBiliIntl/BiliBiliIntl.list,Streaming
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,BiliBili
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Spotify/Spotify.list,Spotify
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/NetEaseMusic/NetEaseMusic.list,NetEaseMusic
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,TikTok
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_All_No_Resolve.list,Streaming
 
 # > Telegram
-RULE-SET,https://raw.githubusercontents.com/Coldvvater/Mononoke/master/Surge/Rules/Telegram.list,Telegram
+RULE-SET,https://raw.gitmirror.com/Coldvvater/Mononoke/master/Surge/Rules/Telegram.list,Telegram
 
 # > GitHub
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list,Global
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/GitHub/GitHub.list,Global
 
 # > Teitter
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list,Global
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,Global
 
 # > Testfilght
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,Global
 
 # > 苹果服务
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_All_No_Resolve.list,Apple
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_All_No_Resolve.list,Apple
 
 # > 谷歌服务
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list,Google
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,Google
 
 # > 微软服务
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list,Microsoft
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
 
 # > 游戏平台
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
 # > 国外网站
-RULE-SET,https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_All_No_Resolve.list,Global
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_All_No_Resolve.list,Global
 
 # > 国内网站
-RULE-SET,https://raw.githubusercontents.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
+RULE-SET,https://raw.gitmirror.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
