修正遗漏替换直连加速的链接

--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -233,7 +233,7 @@ RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surg
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_All_No_Resolve.list,Apple
 
 # > 谷歌服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,Google
+RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,Google
 
 # > 微软服务
 RULE-SET,https://raw.gitmirror.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
