--- a/Stash/RuleSet/AI.yaml
+++ b/Stash/RuleSet/AI.yaml
@@ -35,6 +35,9 @@ payload:
   - DOMAIN-SUFFIX,stripe.com
   - DOMAIN-KEYWORD,openaicom-api
 
+  # Arc 浏览器 Ask on page
+  - DOMAIN,open-ai-chat-omega.vercel.app
+
   # > New Bing
   - DOMAIN-SUFFIX,bing.com
   - DOMAIN-SUFFIX,bingapis.com
@@ -65,7 +68,7 @@ payload:
   - IP-CIDR,164.92.115.213/32,no-resolve
   - IP-CIDR,198.13.38.242/32,no-resolve
   - IP-CIDR,207.148.108.93/32,no-resolve
-  - IP-CIDR6, 2001:19f0:7001:55b3:5400:4ff:feab:ba8f/128,no-resolve
+  - IP-CIDR6,2001:19f0:7001:55b3:5400:4ff:feab:ba8f/128,no-resolve
   - IP-CIDR6,2001:19f0:7001:8e6:5400:4ff:feab:b953/128,no-resolve
   - IP-CIDR6,2001:19f0:7001:1149:5400:4ff:feac:a0b3/128,no-resolve
   - IP-CIDR6,2001:19f0:7001:8e6:5400:4ff:feab:b953/128,no-resolve
